--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         <li><a href="index.html">Главная</a></li>
                         <li><a href="sevencolor.html">Семицветное озеро</a></li>
                         <li><a href="sophia.html">Софийские озера</a></li>
-                        <li><a href="sevencolor.html">Из Архыза на море</a></li>
-                        <li><a href="sevencolor.html">Через Фишт на море</a></li>
+                        <li><a href="tothesea.html">Из Архыза на море</a></li>
+                        <li><a href="tothesealight.html">Через Фишт на море</a></li>
                         <li><a href="sevencolor.html">Что брать в поход</a></li>
                         <li><a href="sevencolor.html">Распорядок дня</a></li>
                         <li><a href="sevencolor.html">Меню похода</a></li>
