--- a/sevencolor.html
+++ b/sevencolor.html
@@ -31,8 +31,8 @@
                         <li><a href="index.html">Главная</a></li>
                         <li><a href="sevencolor.html">Семицветное озеро</a></li>
                         <li><a href="sophia.html">Софийские озера</a></li>
-                        <li><a href="sevencolor.html">Из Архыза на море</a></li>
-                        <li><a href="sevencolor.html">Через Фишт на море</a></li>
+                        <li><a href="tothesea.html">Из Архыза на море</a></li>
+                        <li><a href="tothesealight.html">Через Фишт на море</a></li>
                         <li><a href="sevencolor.html">Что брать в поход</a></li>
                         <li><a href="sevencolor.html">Распорядок дня</a></li>
                         <li><a href="sevencolor.html">Меню похода</a></li>
@@ -52,25 +52,12 @@
                     <h2 id="oldstyle">Простенький походик</h2>
 
                     <img class="photo"src="./css/pict-02-01.jpg">
-                    <p>
-                        Там чем-то прикольно, ночью холодно, днем жарко, бывает дождь, даже снег, иногда грязь, в
-                        палатке
-                        тесно
-                        и неровно, еда непривычная, рюкзаки тяжелые, ... Ой, мама, забери меня обратно, я наигрался в
-                        туриста
-                    </p>
-                    <p>
-                        Но зато обалденные виды, умопомрачительные озера, головокружительные горы, не тающий летом снег,
-                        коленотрусительные перевалы, офигительно вкусное мороженное...
-                    </p>
-                    <p>Плюс адреналин, щенячий восторг от покорения вершины, песни у костра, ну вобщем ты понял...</p>
-                    <p>Сводил в горы, наверно, человек 150, и ни один еще не возмущался...</p>
-                    <p>Лучший способ отметить выпускной, или совершеннолетие, или что-нибудь типа того, кстати. </p>
-                    <p>Короче, есть у меня для вас 3 чумовых маршрута:</p>
-                        <a href="./sevencolor.html">     один попроще, </a>
-                        <a href="./sophia.html">     другой посерьезней, </a>
-                        <a href="#">     третий - ваще...</a>
-                    
+                    <p><b>День 1.</b> Утром выезжаем из Ставрополя. Обедаем уже в Архызе. Смотрим достопримечательности. Едем через пос. Романтик до р. Дукка. Ищем нормальную полянку, ставим там лагерь. Шашлык и все дела...</p>
+                    <p><b>День 2.</b> Сегодня - акклиматизация. Оставляем дежурных и желающих выспаться в лагере и идем на Дуккинские озера. Без рюкзаков - нормально. Озеро Рыбка длинненькое, озеро Аркасарское - здоровенное, а озеро Сказка Кавказа - насколько хватит дури. Возвращаемся обратно в базовый лагерь. </p>
+                    <p><b>День 3.</b> Утром встаем пораньше, завтракаем, собираемся и чапаем с рюкзаками до Семицветного озера. Почему Семицветное? Просто в нем отражаются небо, облака, скалы, травы, цветы и при солнечной погоде и легком ветерке, все это начинает переливаться как калейдоскоп.  Скорее всего, там и заночуем. Но, есть возможность подняться еще немного выше, чтобы посмотреть на это чудо с высоты, и немного облегчить завтрашний день. </p>
+                    <p><b>День 4. </b> Наверно, самый тяжелый день похода. Но никто и не думает о сложности, из-за сногсшибательных красот.  Идем на перевал Аюлю (по русски, Медвежий). Проходим еще несколько разных озер, в некоторых купаемся, смывая пот тяжелого похода. На спуске - Белореченское озеро. </p>
+                    <p><b>День 5. </b> Вниз, вниз и вниз. Там внизу нас ждет цивилизация, сначала в виде ларька с пивом и чебуреками (хычинами), а потом в виде поляны Таулу, где есть все что нужно усталому путнику, баня, магазины и все такое... </p>
+                    <p><b>День 6. </b> Высыпаемся, отъедаемся, покупаем сувениры, обмениваемся контактами со слезами на глазах. К обеду едем в Ставрополь. Вот и все. </p>
 
                 </div>
             </article>
