--- a/safetyrules.html
+++ b/safetyrules.html
@@ -20,9 +20,9 @@
             <div class="container">
                 <img class="logo" src="./css/pict-00-00.jpg"/>
 
-                <h1 class="site-header">Лагонаки - Дагомыс</h1>
+                <h1 class="site-header">Го в Архыз?</h1>
             </div>
-            <marquee>Горы зовут тех, чья душа им по росту. </marquee>
+            <marquee>Кавказ - жемчужина мира, а Архыз - жемчужина Кавказа!</marquee>
         </header>
         <div class="main container">
             <div class="sidebar">
@@ -34,7 +34,7 @@
                         <li><a href="tothesea.html">Из Архыза на море</a></li>
                         <li><a href="tothesealight.html">Через Фишт на море</a></li>
                         <li><a href="equipment.html">Что брать в поход</a></li>
-                        <li><a href="dailyroutine.html">Распорядок дня</a></li>
+                        <li><a href="safetyrules.html">Техника безопасности</a></li>
                         <li><a href="sevencolor.html">Меню похода</a></li>
                         <li><a href="sevencolor.html">Техника безопасности</a></li>
                         <li><a href="sevencolor.html">Фотогалерея</a></li>
@@ -49,17 +49,28 @@
             <article class="article">
                 <div>
 
-                    <h2 id="oldstyle">Вариант через горы на море, но попроще</h2>
+                    <h2 id="oldstyle">А что, я вполне серьезно...</h2>
 
-                    <img class="photo"src="./css/pict-05-01.jpg">
-                    <p>Этот маршрут по сложности, точнее по легкости, подходит даже туристам с детьми. Правда он проходит не по Архызу, а по плато Лагонаки. Минус этого маршрута один - не такие красивые виды, как в Архызе. Три плюса очевидны: простота, горы и море...</p>
-                    <p>План похода прост как 3 копейки. Приезжаем на плато Лагонаки и сразу же без акклиматизации идем.</p>
-                    <p><b>Первые два</b> дня идем до приюта Фишт, где есть зачатки цивилизации.</p>
-                    <p><b>Третий день</b> опять горы. </p>
-                    <p><b>Четвертый день</b> знаменитый "веселый спуск" с дрожащими коленками...</p>
-                    <p><b>Пятый день</b>  - автобус и море...</p>
-                    <p><b>Шестой день</b> - море, море и море... Потом приезжает автобус, все едем в Ставрополь</p>
-
+                    <img class="photo"src="./css/pict-08-01.jpg">
+                    <p>
+                        Там чем-то прикольно, ночью холодно, днем жарко, бывает дождь, даже снег, иногда грязь, в
+                        палатке
+                        тесно
+                        и неровно, еда непривычная, рюкзаки тяжелые, ... Ой, мама, забери меня обратно, я наигрался в
+                        туриста
+                    </p>
+                    <p>
+                        Но зато обалденные виды, умопомрачительные озера, головокружительные горы, не тающий летом снег,
+                        коленотрусительные перевалы, офигительно вкусное мороженное...
+                    </p>
+                    <p>Плюс адреналин, щенячий восторг от покорения вершины, песни у костра, ну вобщем ты понял...</p>
+                    <p>Сводил в горы, наверно, человек 150, и ни один еще не возмущался...</p>
+                    <p>Лучший способ отметить выпускной, или совершеннолетие, или что-нибудь типа того, кстати. </p>
+                    <p>Короче, есть у меня для вас 3 чумовых маршрута:</p>
+                        <a href="./sevencolor.html">     один попроще, </a>
+                        <a href="./sophia.html">     другой посерьезней, </a>
+                        <a href="#">     третий - ваще...</a>
+                    
 
                 </div>
             </article>
