--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         <li><a href="sophia.html">Софийские озера</a></li>
                         <li><a href="tothesea.html">Из Архыза на море</a></li>
                         <li><a href="tothesealight.html">Через Фишт на море</a></li>
-                        <li><a href="sevencolor.html">Что брать в поход</a></li>
-                        <li><a href="sevencolor.html">Распорядок дня</a></li>
+                        <li><a href="equipment.html">Что брать в поход</a></li>
+                        <li><a href="safetyrules.html">Техника безопасности</a></li>
                         <li><a href="sevencolor.html">Меню похода</a></li>
                         <li><a href="sevencolor.html">Техника безопасности</a></li>
                         <li><a href="sevencolor.html">Фотогалерея</a></li>
