--- a/tothesea.html
+++ b/tothesea.html
@@ -22,7 +22,7 @@
 
                 <h1 class="site-header">Архыз - Красная поляна</h1>
             </div>
-            <marquee>Кавказ - жемчужина мира, а Архыз - жемчужина Кавказа!</marquee>
+            <marquee>Когда взберешся на гору, открывается огромное множество гор, на которые предстоит взобраться. </marquee>
         </header>
         <div class="main container">
             <div class="sidebar">
@@ -33,8 +33,8 @@
                         <li><a href="sophia.html">Софийские озера</a></li>
                         <li><a href="tothesea.html">Из Архыза на море</a></li>
                         <li><a href="sevencolor.html">Через Фишт на море</a></li>
-                        <li><a href="sevencolor.html">Что брать в поход</a></li>
-                        <li><a href="sevencolor.html">Распорядок дня</a></li>
+                        <li><a href="equipment.html">Что брать в поход</a></li>
+                        <li><a href="dailyroutine.html">Распорядок дня</a></li>
                         <li><a href="sevencolor.html">Меню похода</a></li>
                         <li><a href="sevencolor.html">Техника безопасности</a></li>
                         <li><a href="sevencolor.html">Фотогалерея</a></li>
